# Electromagnetic-Epistemic-Modeling-Framework-EEMF-

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  tests.yml
deployment/k8s/: simulation-job.yaml
deployment/terraform/: main.tf
docs/: quantum_circuit_mapping.md
scripts/: verify_mpi.py  verify_qiskit.py
src/em_sim/: __init__.py  ethics.py  security.py
src/em_sim/core/: __init__.py  consciousness_integrator.py  field_solver.py  quantum_bridge.py
src/em_sim/fdtd/: __init__.py  output.py  solver.py
src/em_sim/quantum/: __init__.py  circuit_mapper.py  eigenvalue_solver.py  error_mitigation.py  hardware_config.py  validation.py  verification.py
src/em_sim/quantum/tests/: __init__.py  test_circuit_mapper.py  test_eigenvalue_solver.py  test_validation.py
tests/: __init__.py
tests/unit/: __init__.py  test_consciousness_integrator.py  test_fdtd_output.py  test_fdtd_solver.py  test_field_solver.py  test_field_solver_quantum.py
